feat(ai): intégration RAG modulaire, structured output et configuration dynamique par complexité